--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="bg_black">
     
-
+    <div class="container_rounded">
+        <div class="hours"></div>
+    </div>
 
     <script src="./assets/js/script.js"></script>
 </body>
