--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body class="bg_black">
+
+    <h1 style="text-align: center; color: wheat; margin-top: 4rem;">QUANTO TEMPO MANCA ALLA CORREZZIONE DI DOMANI?</h1>
     
     <div class="container_rounded">
-        <div class="hours"></div>
+        <div class="hours">
+            <div id="ore">
+                <h3>ORE</h3>
+                <h3 id="stampaOre"></h3>
+            </div>
+            <div id="minuti">
+                <h3>MINUTI</h3>
+                <h3 id="stampaMinuti"></h3>
+            </div>
+            <div id="secondi">
+                <h3>SECONDI</h3>
+                <h3 id="stampaSecondi"></h3>
+            </div>
+        </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
